# search_engine

./: .gitignore  3.txt  4.txt  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ConvertJSON.cpp  ConvertJSON.cxx  ConvertJSON.hpp  InvertedIndex.cxx  InvertedIndex.hpp  LICENSE  Makefile  README.md  Word.hpp  WordsInFile.hpp  answers.json  cmake_install.cmake  config.json  main  main.cpp  myAnswers.json  requests.json  search-engine.cxx  test.cxx
Google_tests/: CMakeLists.txt  InverterIndexTest.cpp  SearchServerTest.cpp  main.cpp
Google_tests/lib/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
include/: ConverterJSON.h  ConverterJSON.hpp  Help.hpp  InvertedIndex.h  InvertedIndex.hpp  SearchServer.h  SearchServer.hpp
nlohmann_json/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  nlohmann_json.sln
res/: 1.txt  2.txt  3.txt  4.txt
resources/: file001.txt
src/: CMakeLists.txt  ConvertJSON.cpp  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  search-engine.cpp
